Name:          dwarf
Version:       0.23.2
License:       BSD3
License-file:  LICENSE
Category:      Data
Author:        Erik Charlebois
Copyright:     Erik Charlebois
Maintainer:    Erik Charlebois <erikcharlebois@gmail.com>
Stability:     unstable
Cabal-Version: >= 1.2
Build-Depends: base
Build-Type:    Custom
Synopsis:      Parser for DWARF debug format.
Description:   Parser for DWARF debug format.
Data-Files:    tests/Test.hs

library
    build-depends:   base >= 2 && < 5, bytestring >= 0.9 && < 0.10, containers >= 0.3 && < 0.4, binary >= 0.5 && < 0.6, array >= 0.3 && < 0.4, EnumContainers >= 0.1 && < 0.2
    hs-source-dirs:  src
    exposed-modules: Data.Dwarf
